# jerde

./: .gitignore  .pdm.toml  README.md  pyproject.toml
docs/jerde/: index.html
jerde/: __init__.py
tests/: test_converter.py  test_default.py  test_default_with_optional.py  test_kwargs.py  test_literal.py  test_recursive.py  test_rename.py  test_subclass.py
tests/basics/: test_dict.py  test_empty.py  test_list.py  test_nested_models.py  test_simple.py
tests/test_union/: test_optional.py  test_simple_union.py  test_union_dict.py  test_union_list.py
tests/test_union/test_union_models/: test_fallback_to_dict.py  test_no_overlap.py  test_overlap_key.py
